# financeai

./: .gitignore  Financial_AI_Project_Plan.md  LICENSE  PLAN_REVIEW.md  PROJECT_STRUCTURE.md  Project_Plan.md  README.md  REVIEW_RESPONSE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/ingestion/: __init__.py
backend/app/agents/support/: __init__.py
data/knowledge_base/: README.md
data/sample_charts/: README.md
data/synthetic_trades/: README.md
frontend/: Dockerfile  Home.py
frontend/pages/: 1_QA.py  2_Chart.py  3_Anomaly.py
tests/: __init__.py  conftest.py  test_api.py
